--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>   
+      <div class="top">    
+        <img id="logo" src="./img/logo.svg" alt=""> 
+      </div>        
+    </header>
     <main>
         <section></section>
         <section></section>
