--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>   
       <div class="top">    
-        <img id="logo" src="./img/logo.svg" alt=""> 
+        <img src="./img/logo.svg" alt="Logo"> 
       </div>        
     </header>
     <main>
