--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <!-- Header -->
     <header>   
       <div class="top">    
         <img src="./img/logo.svg" alt="Logo"> 
-      </div>        
+      </div>  
+    <!-- /Header       -->
     </header>
     <main>
+    <!-- Title  --> 
+       <h1>Internet deve essere al servizio del "bene publico":il manifesto di Tim Berners-Lee</h1>
+    <!-- /Title  -->
         <section></section>
         <section></section>
         <section></section>
