section title and article

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,23 @@
     <!-- Title  --> 
        <h1>Internet deve essere al servizio del "bene publico":il manifesto di Tim Berners-Lee</h1>
     <!-- /Title  -->
-        <section></section>
+        <section>
+    <!-- Section article -->
+       <article>
+         <p><strong>Scritto da</strong> <a href="#">The Booleaner</a><br>
+            il 10/10/2022
+         </p>
+         <img src="./img/tim-1.jpg" alt="">
+         <img src="./img/tim-2.jpg" alt="">
+         <div>
+            1st foto didascalia
+         </div>
+         <div>
+            2nd foto didascalia
+         </div>
+       </article>
+    <!-- /Section article -->
+        </section>
         <section></section>
         <section></section>
     </main>
