--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
        </article>
     <!-- /Section article -->
         </section>
-        <section></section>
+        <section>
+            <!-- Section info and table -->
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. <mark>Dicta aperiam temporibus nisi voluptate</mark> voluptatum nulla iure numquam maxime. Quia, odit id adipisci magni accusantium provident reprehenderit esse necessitatibus illum. Aperiam.
+            </p>
+            <ul>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
+            </ul>
+             <!-- /Section info and table -->
+        </section>
         <section></section>
     </main>
     <footer></footer>
