--- a/index.html
+++ b/index.html
@@ -44,7 +44,34 @@
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
-            </ul>
+            </ul>           
+              <table>
+              
+                <tr class="theader">
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+                <tr class="tbody">
+                    <td> Lorem ipsum dolor</td>
+                    <td> Lorem ipsum dolor</td>
+                    <td class="last-column">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, maiores, adipisci quasi sint beatae esse qui unde error explicabo dolor nam. Ut, aliquid? Placeat explicabo eius laborum et qui id.
+                    </td>
+                </tr>
+                <tr>
+                    <td> Lorem ipsum dolor</td>
+                    <td> Lorem ipsum dolor</td>
+                    <td class="last-column">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, maiores, adipisci quasi sint beatae esse qui unde error explicabo dolor nam. Ut, aliquid? Placeat explicabo eius laborum et qui id.
+                    </td>
+                </tr>
+                <tr class="tbody">
+                    <td> Lorem ipsum dolor</td>
+                    <td> Lorem ipsum dolor</td>
+                    <td class="last-column">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, maiores, adipisci quasi sint beatae esse qui unde error explicabo dolor nam. Ut, aliquid? Placeat explicabo eius laborum et qui id.
+                    </td>
+                </tr>   
+            </table>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <mark>Quis animi corrupti deleniti reiciendis</mark>, voluptas maiores itaque quod quos maxime adipisci harum sit, ex tempore at modi cumque impedit officiis? Velit?</p>
              <!-- /Section info and table -->
         </section>
         <section></section>
