--- a/index.html
+++ b/index.html
@@ -74,7 +74,17 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. <mark>Quis animi corrupti deleniti reiciendis</mark>, voluptas maiores itaque quod quos maxime adipisci harum sit, ex tempore at modi cumque impedit officiis? Velit?</p>
              <!-- /Section info and table -->
         </section>
-        <section></section>
+        <section>
+            <!-- Section related -->
+             <h3>Potrebbero interessarti</h3>
+             <div id="monitor" class="box-img">
+                <h4>Lorem ipsum dolor</h4>
+             </div>
+             <div id="graph" class="box-img">
+                <h4>Lorem ipsum dolor</h4>
+             </div>
+            <!-- /Section related -->
+        </section>
     </main>
     <footer></footer>
     
