fix: section related and article

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
         <section>
     <!-- Section article -->
        <article>
-         <p><strong>Scritto da</strong> <a href="#">The Booleaner</a><br>
-            il 10/10/2022
-         </p>
-         <img src="./img/tim-1.jpg" alt="">
-         <img src="./img/tim-2.jpg" alt="">
+         <span class="nav"><strong>Scritto da</strong> <a href="#">The Booleaner</a><br>    
+          il 10/10/2022
+        </span>
+         <div>          
+         <img src="./img/tim-1.jpg" alt="Speech">
+         <img src="./img/tim-2.jpg" alt="portrait">
+         </div>
          <div>
             1st foto didascalia
          </div>
@@ -76,7 +78,7 @@
         </section>
         <section>
             <!-- Section related -->
-             <h3>Potrebbero interessarti</h3>
+             <h2>Potrebbero interessarti</h2>
              <div id="monitor" class="box-img">
                 <h4>Lorem ipsum dolor</h4>
              </div>
