--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
             </ul>           
               <table>
-              
                 <tr class="theader">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
@@ -88,7 +87,9 @@
             <!-- /Section related -->
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        ©Copyright by Stefanel
+    </footer>
     
 </body>
 </html>
