--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <section>
     <!-- Section article -->
        <article>
-         <span class="nav"><strong>Scritto da</strong> <a href="#">The Booleaner</a><br>    
+         <span class="nav">
+            <strong>Scritto da</strong> <a href="#">The Booleaner</a><br>    
           il 10/10/2022
         </span>
          <div>          
