--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum tempora aperiam quibusdam officia pariatur eaque minus, eos totam sapiente possimus!</li>
             </ul>           
-              <table>
+              <table id="table-dati">
                 <tr class="theader">
                     <th>Lorem ipsum dolor</th>
                     <th>Lorem ipsum dolor</th>
