fix: section article

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <article>
          <span class="nav">
             <strong>Scritto da</strong> <a href="#">The Booleaner</a><br>    
-          il 10/10/2022
+         <small>il 10/10/2022</small> 
         </span>
          <div>          
          <img src="./img/tim-1.jpg" alt="Speech">
